assets/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

/* Default styling initialise --- Setting Border box initial font families etc */

/* html { 
  scroll-behavior: smooth;
} */

* {
  box-sizing: border-box;
}
body {
  font-family: "Poppins", sans-serif;
  /* font-weight: 600; */
  line-height: 1.6;    
}




h1 {
    font-weight: 500;
    font-size: 60px;

}



/* End of default styles */

 
/* header - hero sections */
 
.hero-hydra {
  background: url("../img/hero.jpg");
  background-repeat: no-repeat;
  background-position: center center;
  background-size: cover;
  margin: auto;
  height: 50vh;
  background-attachment: fixed;
  /* color: #ffffff; */
  position: relative;
}

.hero-hydra::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  /* change RGBA to HEX Alpha Mentor Suggestion */
  background: #24252bcf;
}

/* Hero - Singer */

.hero-singer {
  background: url("../img/singer.jpg");
  background-repeat: no-repeat;
  background-position: center center;
  background-size: cover;
  margin: auto;
  height: 50vh;
  background-attachment: fixed;
  /* color: #ffffff; */
  position: relative;
}

.hero-singer::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  /* change RGBA to HEX Alpha Mentor Suggestion */
  background: #24252bcf;
}


/* Hero - Producers */

.hero-producers {
  background: url("../img/sessionmusician.jpg");
  background-repeat: no-repeat;
  background-position: center center;
  background-size: cover;
  margin: auto;
  height: 50vh;
  background-attachment: fixed;
  /* color: #ffffff; */
  position: relative;
}

.hero-producers::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  /* change RGBA to HEX Alpha Mentor Suggestion */
  background: #24252bcf;
}

/* Hero - Remixers */

.hero-remixers {
  background: url("../img/events.jpg");
  background-repeat: no-repeat;
  background-position: center center;
  background-size: cover;
  margin: auto; 
  height: 50vh;
  background-attachment: fixed;
  /* color: #ffffff; */
  position: relative;
}

.hero-remixers::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  /* change RGBA to HEX Alpha Mentor Suggestion */
  background: #24252bcf;
}

/* Hero - consultancy */

.hero-consultancy {
  background: url("../img/consultancy.jpg");
  background-repeat: no-repeat;
  background-position: center center;
  background-size: cover;
  margin: auto;
  height: 50vh;
  background-attachment: fixed;
  /* color: #ffffff; */
  position: relative;
}

.hero-consultancy::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  /* change RGBA to HEX Alpha Mentor Suggestion */
  background: #24252bcf;
}

 

.hero-text {
  text-align: center;
  position: absolute;
  top: 40%;
  left: 10%;
  right: 10%;

  color: white;
}

/* Titles and headers */

.h2-header-text {
  text-align: center;
  font-size: 30px;
  letter-spacing: -1px;
}


/* Css Animations - Animista.net */

 
.focus-in-contract-bck {
	animation: focus-in-contract-bck 2s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
}

/* ----------------------------------------------
 * Generated by Animista on 2020-6-24 10:0:25
 * Licensed under FreeBSD License.
 * See http://animista.net/license for more info. 
 * w: http://animista.net, t: @cssanimista
 * ---------------------------------------------- */

/**
 * ----------------------------------------
 * animation focus-in-contract-bck
 * ----------------------------------------
 */
@keyframes focus-in-contract-bck {
  0% {
    letter-spacing: 1em;
    transform: translateZ(300px);
    filter: blur(12px);
    opacity: 0;
  }
  100% {
    transform: translateZ(12px);
    filter: blur(0);
    opacity: 1;
  }
}


.text-focus-in {
	-webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
	        animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
}

/* ----------------------------------------------
 * Generated by Animista on 2020-6-24 10:3:18
 * Licensed under FreeBSD License.
 * See http://animista.net/license for more info. 
 * w: http://animista.net, t: @cssanimista
 * ---------------------------------------------- */

/**
 * ----------------------------------------
 * animation text-focus-in
 * ----------------------------------------
 */
@-webkit-keyframes text-focus-in {
  0% {
    -webkit-filter: blur(12px);
            filter: blur(12px);
    opacity: 0;
  }
  100% {
    -webkit-filter: blur(0px);
            filter: blur(0px);
    opacity: 1;
  }
}
@keyframes text-focus-in {
  0% {
    -webkit-filter: blur(12px);
            filter: blur(12px);
    opacity: 0;
  }
  100% {
    -webkit-filter: blur(0px);
            filter: blur(0px);
    opacity: 1;
  }
}




/* container to pull in content on non full width containers */

.container-max {
  margin-left: auto;
  margin-right: auto;
  max-width: 1400px;
  padding: 15px;
}

.container-full {
  margin-left: auto;
  margin-right: auto;
  
  padding: 5px;
}
.container-white {
    background-color:white;
}

.btn-spacer {
    margin: auto;
    padding: 25px;

}

.card-padding {
    padding: 5px;
    margin: auto;
    display: inline-block;
}
.map-padding {
    padding: 25px;
    margin: auto;
    
}

.spacer {
    margin-top: 25px;
    margin-bottom: 25px;

}

.row-background {
background-color: #fafafa;

} 


.btn-pad {
    padding: 1px;

}


.card-img-top {
    width: 100%;
    height: 10vw;
    object-fit: cover;
}

/* Dark Mode */

.darkmode  {
    background-color: black;
}

.darkmode .container-white  {
    background-color: black;
}

.darkmode .row-background  {
    background-color:black;
}


.darkmode .btn { 
    color: white;
}
.darkmode .headline { 
    color: white;
}

